# CatenaVetus

./: .gitignore  .pre-commit-config.yaml  README.MD  README.md  commentaries_to_markdown.py  custom_markdown.py  main.css  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
catena_vetus/: __about__.py  __main__.py  commentaries_to_markdown.py  custom_markdown.py  linkable_markdown_viewer.py  main.css  spinner.py
catena_vetus/database_api/: abbreviations.py  code_verse.py  sql.py
database_api/: abbreviations.py  code_verse.py  commentary_objects.py  errors.py  sql.py
database_api/tests/: test_references.py
tests/test_database_api/: test_reference.py  test_references.py  test_validate_bible_verse.py
