[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[project]
name = "catena_vetus"
description = "A TUI for reading the Church Fathers"
authors = [
  {name = "James Blackburn", email = "blackburnfjames@gmail.com"}
]
keywords = ["catholic", "religion", "christianity", "tui"]
readme = "README.md"
license = "Unlicense"
dynamic = ["version"]
dependencies = [
  "textual (>=8.2.7)"
]
requires-python = ">=3.10,<3.15"
version = "2.0.0"

[project.optional-dependencies]
dev = [
  "pytest (>=9.0.2,<10.0.0)",
  "flake8 (>=7.3.0,<8.0.0)"
]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pytest = "^9.1.0"
pyinstaller = "^6.20.0"

[tool.poetry.requires-plugins]
poetry-pyinstaller-plugin = { version = ">=2.0.0,<3.0.0" }

[tool.poetry-pyinstaller-plugin.targets]
catena-vetus = { source = "catena_vetus/__main__.py", type = "onefile", bundle = false, hidden-import = ["textual.widgets._markdown_viewer", "rich._unicode_data.unicode17-0-0"] }

[tool.poetry-pyinstaller-plugin.package]
"README.md" = "."

[tool.poetry-pyinstaller-plugin.include]
"catena_vetus/main.css" = "."

